# eventon-monorepo

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/core-api/: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.json
apps/core-api/prisma/: seed.ts
apps/core-api/src/: boot.ts  index.ts  server.ts
apps/core-api/src/plugins/: tenant-request-id.ts
apps/core-api/src/routes/: health.ts
apps/web/: .eslintrc.cjs  next.config.mjs  package.json  prettier.config.cjs  tsconfig.json
apps/web/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
docs/ai/: build_prompt.md
services/scheduler/: README.md  package.json  pyproject.toml
services/scheduler/app/: __init__.py  config.py  main.py  models.py
services/scheduler/app/api/: __init__.py  routes.py
services/scheduler/src/: __init__.py  main.py
