[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventon-scheduler"
version = "0.1.0"
description = "Optimisation scheduler service built on OR-Tools"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.20,<0.30",
  "pydantic>=2.6,<3",
  "ortools==9.10.4067",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.uvicorn]
app = "app.main:app"

# Optional: formatter/linter versions as dev tools (installed via your env or requirements)
# black >= 24.1.0, ruff >= 0.2.0

